[Wasm-GC] Fix returned reference in br_on_null in LLInt/B3 https://bugs.webkit.org/show_bug.cgi?id=266167

Reviewed by Justin Michaud.

Fix the LLInt implementation of br_on_null to avoid ovewriting the virtual
register of the reference that should stay on the stack on a non-branch.

* JSTests/wasm/gc/bug266167.js: Added.
(instantiate.module.type.struct.field.i32.func.export.string_appeared_here.block.struct.new.0.i32.const.42.br_on_null.0.struct.0.0.drop.exports.f):
* Source/JavaScriptCore/wasm/WasmLLIntGenerator.cpp:
(JSC::Wasm::LLIntGenerator::addBranchNull):

Canonical link: https://commits.webkit.org/271964@main